WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200130
Response constructor doesn't throw on disturbed ReadableStream
https://bugs.webkit.org/show_bug.cgi?id=200130
Summary
Response constructor doesn't throw on disturbed ReadableStream
Paul Rumkin
Reported
2019-07-25 10:17:43 PDT
It looks like a regression of the
bug #156911
Example code which doesn't throw: try { const stream = new ReadableStream() stream.cancel(); new Response(stream) console.log("Doesn't throw") } catch (_) { console.log("Throws") } Expected behavior: Output "Throws" Current behavior: Output "Doesn't throw" Check online:
https://jsbin.com/yitaloburu/edit?js,console
Safari version is 12.1.1
Attachments
Patch
(22.04 KB, patch)
2019-08-04 19:28 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(21.90 KB, patch)
2019-08-04 19:51 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(21.88 KB, patch)
2019-08-04 23:24 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(3.19 MB, application/zip)
2019-08-05 00:32 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-highsierra
(3.00 MB, application/zip)
2019-08-05 01:14 PDT
,
EWS Watchlist
no flags
Details
Patch
(22.62 KB, patch)
2019-08-05 14:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(28.50 KB, patch)
2019-08-05 15:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-25 11:12:40 PDT
<
rdar://problem/53550351
>
youenn fablet
Comment 2
2019-08-04 19:28:14 PDT
Created
attachment 375515
[details]
Patch
youenn fablet
Comment 3
2019-08-04 19:51:54 PDT
Created
attachment 375516
[details]
Patch
youenn fablet
Comment 4
2019-08-04 23:24:30 PDT
Created
attachment 375521
[details]
Patch
EWS Watchlist
Comment 5
2019-08-05 00:32:46 PDT
Comment on
attachment 375521
[details]
Patch
Attachment 375521
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12862664
New failing tests: imported/w3c/web-platform-tests/fetch/api/request/request-init-stream.any.html
EWS Watchlist
Comment 6
2019-08-05 00:32:47 PDT
Created
attachment 375524
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 7
2019-08-05 01:14:55 PDT
Comment on
attachment 375521
[details]
Patch
Attachment 375521
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12862708
New failing tests: imported/w3c/web-platform-tests/fetch/api/request/request-init-stream.any.html
EWS Watchlist
Comment 8
2019-08-05 01:14:57 PDT
Created
attachment 375525
[details]
Archive of layout-test-results from ews115 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-highsierra Platform: Mac OS X 10.13.6
youenn fablet
Comment 9
2019-08-05 14:11:07 PDT
Created
attachment 375552
[details]
Patch
youenn fablet
Comment 10
2019-08-05 15:11:19 PDT
Created
attachment 375565
[details]
Patch
WebKit Commit Bot
Comment 11
2019-08-05 17:36:16 PDT
Comment on
attachment 375565
[details]
Patch Clearing flags on attachment: 375565 Committed
r248283
: <
https://trac.webkit.org/changeset/248283
>
WebKit Commit Bot
Comment 12
2019-08-05 17:36:18 PDT
All reviewed patches have been landed. Closing bug.
Sam Sneddon [:gsnedders]
Comment 13
2022-06-21 14:56:33 PDT
***
Bug 189042
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug