LayoutTests/imported/w3c: Response constructor doesn't throw on disturbed ReadableStream https://bugs.webkit.org/show_bug.cgi?id=200130 <rdar://problem/53550351>

Reviewed by Alex Christensen.

Update test to use promise_rejects instead of assert_throws.

* web-platform-tests/fetch/api/request/request-init-stream.any-expected.txt:
* web-platform-tests/fetch/api/request/request-init-stream.any.js:
(async.assert_request):
(promise_test.async):
* web-platform-tests/fetch/api/request/request-init-stream.any.worker-expected.txt:
* web-platform-tests/fetch/api/response/response-from-stream.any-expected.txt:
* web-platform-tests/fetch/api/response/response-from-stream.any.worker-expected.txt:

Source/WebCore:
Response constructor doesn't throw on disturbed ReadableStream
https://bugs.webkit.org/show_bug.cgi?id=200130
<rdar://problem/53550351>

Reviewed by Alex Christensen.

Make FetchBody::extract return an exception in error cases.
Update call sites accordingly.
Add the error case as per https://fetch.spec.whatwg.org/#concept-bodyinit-extract, ReadableStream handling.

Covered by updated and rebased tests.

* Modules/beacon/NavigatorBeacon.cpp:
(WebCore::NavigatorBeacon::sendBeacon):
* Modules/fetch/FetchBody.cpp:
(WebCore::FetchBody::extract):
* Modules/fetch/FetchBody.h:
* Modules/fetch/FetchBodyOwner.cpp:
(WebCore::FetchBodyOwner::extractBody):
* Modules/fetch/FetchBodyOwner.h:
* Modules/fetch/FetchRequest.cpp:
(WebCore::FetchRequest::initializeWith):
(WebCore::FetchRequest::setBody):
* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::create):
* Modules/streams/ReadableStreamInternals.js:
(readableStreamPipeTo): fix a case where the promise would be unhandled and would show up in
unhandledrejectionhandler.

LayoutTests:
Support RTCRtpSender.dtmf
https://bugs.webkit.org/show_bug.cgi?id=200431
<rdar://problem/53924833>

Reviewed by Alex Christensen.

Removed cache storage test which is no longer valid.
Removed WK1 expectation that is no longer needed.

* http/wpt/cache-storage/cache-put-stream.https.any.html: Removed.
* http/wpt/cache-storage/cache-put-stream.https.any.js: Removed.
* http/wpt/cache-storage/cache-put-stream.https.any.worker.html: Removed.
* platform/mac-wk1/imported/w3c/web-platform-tests/fetch/api/request/request-init-stream.any-expected.txt: Removed.
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/214221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248283 268f45cc-cd09-0410-ab3c-d52691b4dbfc